fix build config and update manifest

--- a/manifest/manifest.json
+++ b/manifest/manifest.json
@@ -54,6 +54,6 @@
         "thumbnail": "gray.png"
       }
     ],
-    "videoFiltersConfigurationUrl": "https://wenghe.github.io/t2.1/"
+    "videoFiltersConfigurationUrl": "https://wenghe.github.io/teams-videoapp-sample/"
   }
 }
