--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --mode=development --minify=false",
     "preview": "vite preview"
   },
   "keywords": [],
